Fix delete icon position on mobile

--- a/src/components/listItem.module.scss
+++ b/src/components/listItem.module.scss
@@ -1,7 +1,10 @@
 .pageBackground {
   background-color: whitesmoke;
   height: 100vh;
-  margin-left: 270px !important;
+
+  @media (min-width: 800px) {
+    margin-left: 270px !important;
+  }
 }
 
 .container {
@@ -18,6 +21,7 @@
     justify-content: center;
     padding: 10px 20px;
     border-bottom: 1px solid lightgray;
+    position: relative;
 
     & :nth-child(2) {
       min-width: 240px;
@@ -41,6 +45,9 @@
       background: none;
       cursor: pointer;
       margin: 0 0 0 auto;
+      position: absolute;
+      top: 10px;
+      right: 0;
     
       &:hover {
         opacity: 0.7;
@@ -74,18 +81,37 @@ h1 {
       flex-direction: row;
       align-items: center;
       gap: 10px;
+
+      button {
+        position: initial;
+      }
     }
   }
 
 }
 
 @media(max-width: 1230px) {
+  .pageBackground {
+    margin: 0;
+    padding: 0;
+  }
+
   .container {
+
+    h1 {
+      padding: 40px 0 0 20px;
+    }
 
     & > div {
       flex-direction: column;
       align-items: flex-start;
       gap: 20px;
+
+      button {
+        position: absolute;
+        top: 10px;
+        right: 0;
+      }
     }
   }
 }
